--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "qs": "^6.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-kakao-login": "^2.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
