--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
+    "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
     "qs": "^6.10.3",
     "react": "^18.1.0",
